@@ -2,6 +2,14 @@
 Python News
 +++++++++++
 
+What's New in Python 3.3.5?
+===========================
+
+*Release date: 09-Mar-2014*
+
+No changes from release candidate 2.
+
+
 What's New in Python 3.3.5 release candidate 2?
 ===============================================
 
